--- a/approach.html
+++ b/approach.html
@@ -20,7 +20,7 @@
          <span class="icon-bar"></span>
        </a><div class="nav-collapse" id="main-menu">
         <ul class="nav pull-right" id="main-menu-right">
-          <li><a onclick="window.open ('login.html','_self',false)">Login</a></li>
+          <li><a onclick="window.open ('login.php','_self',false)">Login</a></li>
           <li><a onclick="window.open ('signup.html','_self',false)">Signup</a></li>
           </ul>
         
