Added all files

--- a/playground/course-101/course-101-1.html
+++ b/playground/course-101/course-101-1.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<link type="text/css" rel="stylesheet" href="../css/common.css"  /><link type="text/css" rel="stylesheet" href="../css/buttons.css"  />
+<link type="text/css" rel="stylesheet" href="css/common.css"  />
 
 <h1>
 Welcome To Environment 101!
@@ -17,13 +17,7 @@ Welcome To Environment 101!
 </h2>
 <br/>
 <div class="course-progress">
- <!-- Dynamically generated -->
-	0%
-     <!-- Dynamically generated -->
-     <br />
-<br />
- 
-       <div style="text-align:center;"> <input  class="button primary" value="Next!" onClick="window.location='course-101-2.php'"/> </div>
+	56%
 </div>
 </body>
 </html>
