--- a/playground/course-101/course-101-10.html
+++ b/playground/course-101/course-101-10.html
@@ -16,16 +16,15 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
     <script type="text/javascript">
       google.load('visualization', '1', {packages: ['geomap']});
     </script>
-      <link type="text/css" rel="stylesheet" href="../css/common.css"  /><link type="text/css" rel="stylesheet" href="../css/buttons.css"  />
+      <link type="text/css" rel="stylesheet" href="css/common.css"  />
    
   </head>
   <body style="font-family: Arial;border: 0 none;">
   <h1>
-  	Congratulations!
+  	Population
   </h1>
   <p>
-  	You have reached the end of this course!
+  	is defined as blah blah blah.
   </p>
-  
   </body>
 </html>
