--- a/playground/course-101/course-101-5.html
+++ b/playground/course-101/course-101-5.html
@@ -14,7 +14,7 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
     <script type="text/javascript">
       google.load('visualization', '1', {packages: ['geochart']});
     </script>
-    <link type="text/css" rel="stylesheet" href="../css/common.css"  /><link type="text/css" rel="stylesheet" href="../css/buttons.css"  />
+      <link type="text/css" rel="stylesheet" href="css/common.css"  />
     <style type="text/css">
 		*
 		{
@@ -31,7 +31,7 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
     function drawVisualization() {
       // To see the data that this visualization uses, browse to
       // http://spreadsheets.google.com/ccc?key=pCQbetd-CptGXxxQIG7VFIQ
-      var query = new google.visualization.Query('https://docs.google.com/spreadsheet/ccc?key=0Ajf0Qu3iKU02dEw5aVVqMnRRSkpzT1BVSVVhaG52UlE#gid=0');
+      var query = new google.visualization.Query('https://docs.google.com/spreadsheet/ccc?key=0Ajf0Qu3iKU02dHdsa0c4QkNEaXFTUjFiN1l0ZEhiNkE#gid=0');
     
       // Send the query with a callback function.
       query.send(handleQueryResponse);
@@ -47,7 +47,6 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
       var options = {
         region: 'world',
         displayMode: 'regions',
-		backgroundColor:'#646464',
         colorAxis: {colors: ['red', 'white', 'green']}
       };
 
@@ -59,10 +58,7 @@ Apache license (http://www.apache.org/licenses/LICENSE-2.0.html)
     google.setOnLoadCallback(drawVisualization);
     </script>
   </head>
-  <body style="font-family: Arial;border: 0 none; ">
-    <div id="visualization" style="height: 800px; width: 800px;margin:auto;"></div><br />
-<br />
- 
-       <div style="text-align:center;"> <input  class="button primary" value="Next!" onClick="window.location='course-101-11.php'"/> </div>
+  <body style="font-family: Arial;border: 0 none; text-align:center;">
+    <div id="visualization" style="height: 500px; width: 800px;margin:auto;"></div>
   </body>
 </html>
